add delete endpoint in geometry-server
